--- a/WebLeave/SPA/src/assets/i18n/en.json
+++ b/WebLeave/SPA/src/assets/i18n/en.json
@@ -20,6 +20,7 @@
       "ChangePasswordOKMsg": "Change Password successfully",
       "CreateErrorMsg": "Creating failed on save",
       "UpdateErrorMsg": "Updating failed on save",
+      "DuplicateMsg": "Key already exists",
       "DeleteErrorMsg": "Deleting failed on save",
       "UploadErrorMsg": "Uploading failed on save",
       "ChangePasswordErrorMsg": "Change Password failed on save",
@@ -522,9 +523,11 @@
       "Rejected": "Rejected",
       "Finish": "Finish",
       "Status": "Status",
-      "LeaveCatalog": "Leave  Category",
+      "LeaveCatalog": "Leave Category",
       "No": "No",
       "Year": "Year",
+      "YearTo": "Year To",
+      "YearFrom": "Year From",
       "AppliedAt": "Applied at",
       "LeaveCategory": "Leave Category",
       "Catalog": "Category",
@@ -732,6 +735,7 @@
       "WorkTime": "Work Time",
       "LunchTime": "Lunch Time",
       "Value": "Value",
+      "Shift": "Shift",
       "Visible": "Visible",
       "Page": "Page",
       "Start": "Starting time",
