--- a/WebLeave/SPA/src/assets/i18n/zh.json
+++ b/WebLeave/SPA/src/assets/i18n/zh.json
@@ -21,6 +21,7 @@
       "ChangePasswordErrorMsg": "密碼修改失敗",
       "CreateErrorMsg": "存檔中無法新增",
       "UpdateErrorMsg": "存檔中無法更新",
+      "DuplicateMsg": "金鑰已存在",
       "DeleteErrorMsg": "刪除失敗",
       "UploadErrorMsg": "上傳失敗",
       "Unauthorized": "無權限觀看此頁",
@@ -538,6 +539,8 @@
       "Place": "所有假別",
       "LeaveCatalog": "所有假別",
       "Year": "年",
+      "YearFrom": "年(起)",
+      "YearTo": "年(訖)",
       "No": "序號",
       "AppliedAt": "申請時間",
       "LeaveCategory": "假別",
@@ -702,6 +705,7 @@
       "WorkTime": "工作时间",
       "LunchTime": "午休时间",
       "Value": "价值",
+      "Shift": "班",
       "Visible": "可见的",
       "Page": "页",
       "Start": "开始",
